# windowbuilder

./: .gitignore  .project  CONTRIBUTING.md  Jenkinsfile  LICENSE  NOTICE.md  README.md  RELEASE_NOTES.md  SECURITY.md  pom.xml
.github/: dependabot.yml
icons/: .project  build.sh
org.eclipse.wb.core/: .classpath  .fbprefs  .options  .project  Changes.txt  about.html  about.properties  build.properties  pom.xml  (+6 more)
org.eclipse.wb.core.databinding/: .fbprefs  .project  build.properties  plugin.properties  plugin.xml  pom.xml
org.eclipse.wb.core.databinding.xml/: .fbprefs  .project  build.properties  plugin.properties  plugin.xml
org.eclipse.wb.core.databinding.xsd/: .classpath  .project  about.html  build.properties  plugin.properties  pom.xml
org.eclipse.wb.core.feature_feature/: .project  build.properties  feature.properties  feature.xml  p2.inf  pom.xml
org.eclipse.wb.core.java/: .options  .project  about.html  about.properties  build.properties  plugin.properties  plugin.xml
org.eclipse.wb.core.java.feature_feature/: .project  feature.properties  feature.xml
org.eclipse.wb.core.lib/: .classpath  .project  build.properties  plugin.properties  pom.xml
org.eclipse.wb.core.ui/: .fbprefs  .project  about.ini  about.properties  build.properties  plugin.properties  plugin.xml
org.eclipse.wb.core.ui.feature_feature/: .project  feature.properties  feature.xml  license.html
org.eclipse.wb.core.xml/: .fbprefs  .project  about.properties  build.properties  plugin.properties  plugin.xml
org.eclipse.wb.core.xml.feature_feature/: .project  feature.properties  feature.xml
org.eclipse.wb.os.linux/native/gtk/gtk2/: CMakeLists.txt  gconf.c  rcp.c
org.eclipse.wb.os.linux/native/gtk/gtk3/: CMakeLists.txt  rcp.c
(+6993 files in other folders)
